[workspace]
resolver = "2"
members = [
    "crates/spage-engine",
    "crates/spage-engine-napi",
    "crates/spage-scaffold",
    "packages/create-s-blog",
]

# Optimise image-heavy deps even in dev/test builds so that thumbnail
# generation doesn't take minutes in debug mode.
[profile.dev.package.image]
opt-level = 3

[profile.dev.package.webp]
opt-level = 3
