[package]
name = "s-blog-engine"
version = "0.1.0"
edition = "2021"
description = "Core data engine for s-blog — Markdown parsing, image processing, SEO/feed generation"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Date / timezone
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Image processing
image = "0.25"
webp = "0.3"

# EXIF
kamadak-exif = "0.5"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
log = "0.4"

# NAPI (optional — only used for error conversion when building bindings)
napi = { version = "2", default-features = false, features = ["napi4"], optional = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"

[features]
default = []
napi = ["dep:napi"]
