[package]
name = "s-blog-engine"
version = "0.1.0"
edition = "2021"
description = "Core data engine for s-blog — Markdown parsing, image processing, SEO/feed generation"
license = "MIT"

[dependencies]
# Regex
regex = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Date / timezone
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Image processing
image = "0.25"
webp = "0.3"

# EXIF
kamadak-exif = "0.5"

# Async runtime (sync feature for oneshot channels)
tokio = { version = "1", features = ["sync", "rt-multi-thread", "net", "macros"] }

# HTTP server
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
log = "0.4"

# NAPI (optional — only used for error conversion when building bindings)
napi = { version = "2", default-features = false, features = ["napi4"], optional = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"

[features]
default = []
napi = ["dep:napi"]
