[package]
name = "s-blog-scaffold"
version = "0.4.3"
edition = "2021"
description = "Core scaffold logic for s-blog — template copying and config injection"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
json_comments = "0.2"
thiserror = "2"
