[package]
name = "spage-scaffold"
version = "0.6.0"
edition = "2021"
description = "Core scaffold logic for spage — template copying and config injection"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
json_comments = "0.2"
thiserror = "2"
include_dir = "0.7"
